Added a space between header and comp

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
             <!-- React Frontend Ecommerce End -->
 
-            <h3>Other Projects</h3>
+            <h3 class="mb-5">Other Projects</h3>
 
             <!-- Other Projects Start -->
             <section class="row mt-4 m-0">
